# VRMLbot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
lib/: __init__.py  admin_actions.py  config.py  guild.py  player_cache.py  tasks.py  utils.py
vrml/: __init__.py  bio.py  game.py  http.py  match.py  newspost.py  player.py  season.py  set.py  team.py  user.py  utils.py
