[tool.poetry]
name = "vrmlbot"
version = "0.1.0"
description = ""
authors = ["PaulMndn <paul.m.menden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "2.0.0b5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
